Mon Oct 12 23:12:03 CDT 1998 Frank Belew <frb@umr.edu>

	* esd.h: removed anything resembling a socket header
	* esd-server.h: added everything removed from esd.h
	* audio_alsa.c: #include esd.h instead of esd-server.h since sockets 
	are not needed.
	* esdlib.c: removed superfluous headers that are already included from
	esd-server.h

1998-10-10  Yo Ric Dude  <ricdude@ix.netcom.com>

	* esd-server.h, esd.c, esd.h, esdlib.c, mix.c, proto.c, filter.c,
 	esdfilt.c Makefile.am, .cvsignore: filter patch courtesy of Bibek
 	Sahu. ten points to the first person to create esdequalizer. does
 	libgsl do digital filters?

Tue Oct  6 20:57:37 PDT 1998 Manish Singh <yosh@gimp.org>

	* esd.c: nanosleep in the no data ready case too, so we don't
	suck up CPU

Sat Oct  3 13:31:29 PDT 1998 Manish Singh <yosh@gimp.org>

	* audio.c: added driver_trace variable for sound driver debug
	messages

	* audio_alsa.c: use driver_trace instead of esdbg_trace, since
	that's limited to the server. Fix Pav's completely broken fix.

Thu Oct  1 19:27:22 PDT 1998 Manish Singh <yosh@gimp.org>

	* esd.m4: make it work right

1998-10-01  Yo Ric Dude  <ricdude@piranha>

	* esound.spec[.in]: make autoconf do the version updating for us.

	* Makefile.am, configure.in: move version updating to same place.

1998-10-01  Yo Ric Dude  <ricdude@ix.netcom.com>

	* audio_alsa.c: multiple audio card detection patches from Bibek.
  	This should open and use the first available card under ALSA.  It
 	has been tested on single card systems, and works fine.  However,
 	no one with multiple audio cards has tested this, so if anyone is
 	feeling brave and adventurous... =)

1998-10-01  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd.h, esdlib.c: why sample size is treated as a long in esdlib,
 	but an int everywhere else is beyond me.  64 bit platforms should
 	be happier now. still have to check 32-64 bit interoperability

	* configure.in: touch-ups and commenting *shudder*.
